Remove the LibOut directory from git repo and add it to gitignore list Make the batch and shell scripts can auto-make the LibOut directory

--- a/Win32LibTest/Win32LibTest.vcxproj.filters
+++ b/Win32LibTest/Win32LibTest.vcxproj.filters
@@ -15,7 +15,9 @@
     <ClInclude Include="main.h">
       <Filter>源文件</Filter>
     </ClInclude>
-    <ClInclude Include="constants.h" />
+    <ClInclude Include="constants.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="build_start.bat">
