Complete the LinuxLibTest project * issue : The tree.hpp has alot of bugs need to be fixed

--- a/LinuxLibTest/CMakeLists.txt
+++ b/LinuxLibTest/CMakeLists.txt
@@ -1,8 +1,15 @@
-cmake_minimum_required(VERSION 3.3)
+cmake_minimum_required(VERSION 3.0)
 project(LinuxLibTest)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(CMAKE_TAR_NAME LinuxLibTest)
+
+MESSAGE("${ARMYANTLIB_TAR}")
+
+set(JNI_INCLUDE_DIR $ENV{JAVA_HOME}/include)
+MESSAGE("The JNI directory is ${JNI_INCLUDE_DIR}")
+include_directories(${JNI_INCLUDE_DIR})
+include_directories(${JNI_INCLUDE_DIR}/linux)
 
 if(CMAKE_BUILD_TYPE STREQUAL Debug)
     add_definitions(
@@ -14,9 +21,36 @@ else()
     )
 endif()
 
+if(ARMYANTLIB_TAR STREQUAL i386)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -m32")
+    add_definitions(
+            -D_x86=1
+            -D_32BIT=1
+    )
+elseif(ARMYANTLIB_TAR STREQUAL x64)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -m64")
+    add_definitions(
+            -D_x86=1
+            -D_64BIT=1
+    )
+elseif(ARMYANTLIB_TAR STREQUAL arm)
+    set(CMAKE_CXX_COMPILER "arm-linux-gnueabi-g++")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
+    add_definitions(
+            -D_arm=1
+            -D_32BIT=1
+    )
+elseif(ARMYANTLIB_TAR STREQUAL arm64)
+    set(CMAKE_CXX_COMPILER "arm-linux-gnueabi-g++")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
+    add_definitions(
+            -D_arm=1
+            -D_64BIT=1
+    )
+endif()
+
 add_definitions(
         -D_cplusplus=201412L
-        -D_x86_64=1
         -D_CMAKE=1
         -DOS_UNIX=1
 )
@@ -27,5 +61,5 @@ set(SOURCE_FILES
 
 add_executable(${CMAKE_TAR_NAME} ${SOURCE_FILES})
 
-MESSAGE(${PROJECT_BINARY_DIR})
+MESSAGE("${PROJECT_BINARY_DIR}")
 SET_TARGET_PROPERTIES(${CMAKE_TAR_NAME} PROPERTIES OUTPUT_NAME LinuxLibTest)
