--- a/.gitignore
+++ b/.gitignore
@@ -216,17 +216,20 @@ $RECYCLE.BIN/
 *.lastbuildstate
 *.exp
 *.ipdb
-/ArmyAntLib/bin/*.so
-/ArmyAntLib/Makefile
-/ArmyAntLib/bin
-/ArmyAntLib/lib
 *.xdc
 *.iobj
 *.db
-/LibOut
 *.opendb
+*.cmake
+/LibOut
+/ArmyAntLib/bin
 /ArmyAntLib/lib
 /Win32LibTest/bin
 /Win32LibTest/lib
+/LinuxLibTest/bin
+/LinuxLibTest/lib
+/LinuxLibTest/LinuxLibTest
+/ArmyAntLib/Makefile
 /ArmyAntLib/CMakeFiles
-*.cmake
+/LinuxLibTest/Makefile
+/LinuxLibTest/CMakeFiles
