--- a/LinuxLibTest/CMakeLists.txt
+++ b/LinuxLibTest/CMakeLists.txt
@@ -60,6 +60,8 @@ set(SOURCE_FILES
         )
 
 add_executable(${CMAKE_TAR_NAME} ${SOURCE_FILES})
+TARGET_LINK_LIBRARIES(${CMAKE_TAR_NAME} dl)
 
 MESSAGE("${PROJECT_BINARY_DIR}")
 SET_TARGET_PROPERTIES(${CMAKE_TAR_NAME} PROPERTIES OUTPUT_NAME LinuxLibTest)
+
