--- a/proj/CMakeLists.txt
+++ b/proj/CMakeLists.txt
@@ -54,11 +54,11 @@ ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
 			-DOS_UNIX=1
 			-DOS_LINUX=1
 	)
-ELSEIF (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
+ELSEIF (CMAKE_SYSTEM_NAME MATCHES "BSD")
 	set(PY_INCLUDE_DIR $ENV{PYTHON_INCLUDE})
 	add_definitions(
 			-DOS_UNIX=1
-			-DOS_FREEBSD=1
+			-DOS_BSD=1
 	)
 ELSE ()
 
