--- a/proj/ArmyAntLib.vcxproj.filters
+++ b/proj/ArmyAntLib.vcxproj.filters
@@ -100,6 +100,12 @@
     <ClInclude Include="..\src\io\AAIStream_Private.hxx">
       <Filter>io</Filter>
     </ClInclude>
+    <ClInclude Include="..\inc\AASqlClient.h">
+      <Filter>data</Filter>
+    </ClInclude>
+    <ClInclude Include="..\inc\AASqlStructs.h">
+      <Filter>algorithm</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\base\ArmyAntLib.cpp">
