--- a/proj/ArmyAntLib_JNI.vcxproj
+++ b/proj/ArmyAntLib_JNI.vcxproj
@@ -484,6 +484,11 @@
   <ItemGroup>
     <ClCompile Include="..\src\JNI\AAJNITools.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="ArmyAntLib.vcxproj">
+      <Project>{14fa4233-0d4c-46b8-82f1-44262938b95a}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
